@@ -26,6 +26,7 @@
 #define ACCOUNT_MATCHER_H
  
 #include "Account.h"
+#include "gnc-ui-common.h"
 
 /**  Must be called with a string containing a unique identifier for the
   account.  If an account with a matching online_id kvp_frame is
@@ -35,6 +36,8 @@
   written to the account's kvp_frame, so the user won't be prompted
   again).  If the user refuses to select or create an account, NULL is
   returned.
+
+  @param parent The parent widget. Can be NULL.
 
     @param account_online_id_value The string containing your unique
     account_id coming from some string of your module.  This is the
@@ -86,7 +89,8 @@
   @return A pointer to the found or created Account, or NULL if no
   account was found or created.
 */
-Account * gnc_import_select_account(const gchar * account_online_id_value,
+Account * gnc_import_select_account(gncUIWidget parent,
+				    const gchar * account_online_id_value,
 				    gboolean auto_create,
 				    const gchar * account_human_description,
 				    gnc_commodity * new_account_default_commodity,
