@@ -298,7 +298,8 @@ run_account_picker_dialog (GNCImportMainMatcher *info,
   gboolean ok_pressed;
   g_assert (trans_info);
   old_acc = gnc_import_TransInfo_get_destacc (trans_info);
-  new_acc = gnc_import_select_account(NULL,
+  new_acc = gnc_import_select_account(info->dialog,
+				      NULL,
 				      TRUE,
 				      _("Destination account for the auto-balance split."),
 				      xaccTransGetCurrency(gnc_import_TransInfo_get_trans(trans_info)),
